<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go Euro Search Form</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_txt">Search</string>
    <string name="start_location_hint">Start location..</string>
    <string name="end_location_hint">End location..</string>
    <string name="Searching">Searching...</string>
    <string name="Done">Search is not yet implemented</string>
    

</resources>
