<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <AutoCompleteTextView
            android:id="@+id/edit_txt_start_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/start_location_hint" >
        </AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/edit_txt_end_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/end_location_hint" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/search_txt"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:colorComplete="@color/green_complete"
            custom:colorNormal="@color/blue_normal"
            custom:colorPressed="@color/blue_pressed"
            custom:colorProgress="@color/purple_progress"
            custom:textComplete="@string/Done"
            custom:textProgress="@string/Searching" >
        </com.dd.processbutton.iml.ActionProcessButton>
    </LinearLayout>

</RelativeLayout>